Updating profile pic, adding social icons to about.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <!-- build:css(app) styles/vendor.css -->
     <!-- bower:css -->
-    <link rel="stylesheet" href="/tanya/bower_components/bootstrap.css/css/bootstrap.css">
+      <link rel="stylesheet" href="/tanya/bower_components/bootstrap.css/css/bootstrap.css">
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css({.tmp,app}) styles/style.css -->
@@ -35,7 +35,7 @@
     <![endif]-->
 
     <div class="header">
-		<img src="/tanya/images/header.jpg" alt="Forest">
+		<img src="/tanya/images/header2.jpeg" alt="Forest">
 		<div class="name fancy-font">
 		            Tanya Colaco
 		</div>
@@ -44,9 +44,9 @@
 		    <h2>I love to travel all around the world and design beautiful things</h2>
 		</div>
 		<div class="social">
-		    <a class="facebook" href="#"><i class="fa fa-facebook"></i></a>
-		    <a class="twitter" href="#"> <i class="fa fa-twitter"></i></a>
-		    <a class="instagram" href="#"><i class="fa fa-instagram"></i></a>
+		    <a class="facebook" target="_blank" href="https://www.facebook.com/TanyaColaco"><i class="fa fa-facebook"></i></a>
+		    <a class="twitter" target="_blank" href="https://twitter.com/tanyacolaco"> <i class="fa fa-twitter"></i></a>
+		    <a class="instagram" target="_blank" href="http://instagram.com/tanyascorner/"><i class="fa fa-instagram"></i></a>
 		</div>
     </div>
     <div class="instagram-wrap">
@@ -78,9 +78,21 @@
         <div class="container">
             <div class="row">
                 <div class="col-xs-12">
-                    <h4>Get in touch</h4>
-                    <p class="about-text">I shoot, design and write. Don't hesitate and get in touch with me if you need some creative work done. I always work to achieve my best and fulfil client needs</p>
-                    <a class="contact-now-btn" href="#">Contact Now</a>
+                    <div class="row">
+                        <div class="col-xs-4">
+                            <img class="about-img" src="/tanya/images/profile2.jpg" />
+                        </div>
+                        <div class="col-xs-7 col-xs-offset-1 about-text">
+                            <h4>Get in touch</h4>
+                            <p>I am a recent graduate from Simon Fraser University with a Bachelor of Arts Degree in Communications Studies. I have seven years of experience in customer service, with a strong ability to build productive relationships with clients and win customer loyalty. Additionally, my degree in Communications has expanded my horizons, and has provided me with a strong foundation in researching, writing, and editing.</p>
+                            <h5>Contact me on:</h5>
+                            <div class="about-social">
+                                <a class="facebook" target="_blank" href="https://www.facebook.com/TanyaColaco"><i class="fa fa-facebook"></i></a>
+                                <a class="twitter" target="_blank" href="https://twitter.com/tanyacolaco"> <i class="fa fa-twitter"></i></a>
+                                <a class="instagram" target="_blank" href="http://instagram.com/tanyascorner/"><i class="fa fa-instagram"></i></a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -108,6 +120,7 @@
     <!-- build:js(app) scripts/vendor.js -->
     <!-- bower:js -->
     <script src="/tanya/bower_components/jquery/dist/jquery.js"></script>
+    <script src="/tanya/bower_components/moment/min/moment.min.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
